[gd_scene load_steps=5 format=3 uid="uid://bs2465qtho3bu"]

[ext_resource type="Script" path="res://src/sprite_selector/add_sprite.gd" id="1_w6ncu"]
[ext_resource type="Script" path="res://src/sprite_selector/sprite_list.gd" id="2_y3h1p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kefq6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s6hla"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_w6ncu")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(479, 400)
exclusive = false
ok_button_text = "Open"
dialog_hide_on_ok = true
dialog_autowrap = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.svg")
use_native_dialog = true

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="AddSpriteButton" type="Button" parent="VBoxContainer2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 20)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_kefq6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_s6hla")
text = "Add Sprite"

[node name="VBox" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxIntems" type="VBoxContainer" parent="VBoxContainer2/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_y3h1p")

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/MarginContainer/AddSpriteButton" to="." method="_on_add_sprite_button_pressed"]
